---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` expects 2 arguments, but 3 were provided
  ┌─ [snippet]:3:6
  │
3 │   x: Map<u8, u8, u8>
  │      ^^^ --  --  -- supplied 3 arguments
  │      │            
  │      expects 2 arguments

error: Expected a value with a fixed size
  ┌─ [snippet]:3:6
  │
3 │   x: Map<u8, u8, u8>
  │      ^^^^^^^^^^^^^^^


